Opened 9 years ago
Closed 9 years ago
#12755 closed bug (fixed)
rewinddir() doesn't work properly with readdir_r
Reported by: | saprykin | Owned by: | nobody |
---|---|---|---|
Priority: | normal | Milestone: | Unscheduled |
Component: | System/POSIX | Version: | R1/Development |
Keywords: | rewinddir readdir_r dirent | Cc: | |
Blocked By: | Blocking: | ||
Platform: | All |
Description
I have noticed a wrong behavior of rewinddir():
- open a directory with opendir() and read to the end using readdir_r();
- call rewinddir();
- try to read the next entry with readdir_r().
I was expecting to get the first directory entry, instead of that I'm getting NULL which means the end of a directory stream.
Note:
See TracTickets
for help on using tickets.
Should be fixed in hrev50292.