src/system/libroot/posix/dirent.c
@@ -243,7 +243,26 @@ readdir(DIR* dir)
 int
 readdir_r(DIR* dir, struct dirent* entry, struct dirent** _result)
 {
-	ssize_t count = _kern_read_dir(dir->fd, entry, sizeof(struct dirent)
+	ssize_t count;
+
+	if (dir->seek_position != dir->current_position) {
+		if (do_seek_dir(dir) != 0)
+			return -1;
+	}
+
+	if (dir->entries_left > 0) {
+		*_result
+			= (struct dirent *)((uint8 *)&dir->first_entry + dir->next_entry);
+
+		dir->entries_left--;
+		dir->next_entry += (*_result)->d_reclen;
+		dir->seek_position++;
+		dir->current_position++;
+
+		return 0;
+	}
+
+	count = _kern_read_dir(dir->fd, entry, sizeof(struct dirent)
 		+ B_FILE_NAME_LENGTH, 1);
 	if (count < B_OK)
 		return count;
@@ -251,8 +270,13 @@ readdir_r(DIR* dir, struct dirent* entry, struct dirent** _result)
 	if (count == 0) {
 		// end of directory
 		*_result = NULL;
-	} else
+	} else {
 		*_result = entry;
+		dir->entries_left = count - 1;
+		dir->next_entry = dir->first_entry.d_reclen;
+		dir->seek_position++;
+		dir->current_position++;
+	}
 
 	return 0;
 }
